// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Data Display/MLCollapse Accordion 1`] = `
<div>
  <div>
    Note: On the hosted (non-local) StoryBook, this component's custom CSS is not currently rendering correctly. This should not affect use of the component in your app.
  </div>
  <div
    class="ant-collapse ant-collapse-borderless ant-collapse-icon-position-left ml-collapse"
    role="tablist"
  >
    <div
      class="ant-collapse-item ant-collapse-item-active ml-collapse-panel"
    >
      <div
        aria-expanded="true"
        class="ant-collapse-header"
        role="tab"
        tabindex="0"
      >
        <i
          aria-label="icon: right"
          class="anticon anticon-right ant-collapse-arrow"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="-ms-transform:rotate(90deg);transform:rotate(90deg)"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
            />
          </svg>
        </i>
        This is panel header 1
      </div>
      <div
        class="ant-collapse-content ant-collapse-content-active"
        role="tabpanel"
      >
        <div
          class="ant-collapse-content-box"
        >
          <p>
            Example body text
          </p>
        </div>
      </div>
    </div>
    <div
      class="ant-collapse-item ml-collapse-panel"
    >
      <div
        aria-expanded="false"
        class="ant-collapse-header"
        role="tab"
        tabindex="0"
      >
        <i
          aria-label="icon: right"
          class="anticon anticon-right ant-collapse-arrow"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
            />
          </svg>
        </i>
        This is panel header 2
      </div>
    </div>
    <div
      class="ant-collapse-item ant-collapse-item-disabled ml-collapse-panel"
    >
      <div
        aria-expanded="false"
        class="ant-collapse-header"
        role="tab"
        tabindex="-1"
      >
        <i
          aria-label="icon: right"
          class="anticon anticon-right ant-collapse-arrow"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
            />
          </svg>
        </i>
        This is panel header 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Data Display/MLCollapse Basic 1`] = `
<div>
  <div>
    Note: On the hosted (non-local) StoryBook, this component's custom CSS is not currently rendering correctly. This should not affect use of the component in your app.
  </div>
  <div
    class="ant-collapse ant-collapse-borderless ant-collapse-icon-position-left ml-collapse"
  >
    <div
      class="ant-collapse-item ant-collapse-item-active ml-collapse-panel"
    >
      <div
        aria-expanded="true"
        class="ant-collapse-header"
        role="button"
        tabindex="0"
      >
        <i
          aria-label="icon: right"
          class="anticon anticon-right ant-collapse-arrow"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="-ms-transform:rotate(90deg);transform:rotate(90deg)"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
            />
          </svg>
        </i>
        This is panel header 1
      </div>
      <div
        class="ant-collapse-content ant-collapse-content-active"
      >
        <div
          class="ant-collapse-content-box"
        >
          <p>
            Example body text
          </p>
        </div>
      </div>
    </div>
    <div
      class="ant-collapse-item ant-collapse-item-active ml-collapse-panel"
    >
      <div
        aria-expanded="true"
        class="ant-collapse-header"
        role="button"
        tabindex="0"
      >
        <i
          aria-label="icon: right"
          class="anticon anticon-right ant-collapse-arrow"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="-ms-transform:rotate(90deg);transform:rotate(90deg)"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
            />
          </svg>
        </i>
        This is panel header 2
      </div>
      <div
        class="ant-collapse-content ant-collapse-content-active"
      >
        <div
          class="ant-collapse-content-box"
        >
          <p>
            A dog is a type of domesticated animal.
  Known for its loyalty and faithfulness,
  it can be found as a welcome guest in many households across the world.
          </p>
        </div>
      </div>
    </div>
    <div
      class="ant-collapse-item ant-collapse-item-disabled ml-collapse-panel"
    >
      <div
        aria-expanded="false"
        class="ant-collapse-header"
        role="button"
        tabindex="-1"
      >
        <i
          aria-label="icon: right"
          class="anticon anticon-right ant-collapse-arrow"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
            />
          </svg>
        </i>
        This is panel header 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Data Display/MLCollapse Custom Panel Style 1`] = `
<div>
  <div>
    Note: On the hosted (non-local) StoryBook, this component's custom CSS is not currently rendering correctly. This should not affect use of the component in your app.
  </div>
  <div
    class="ant-collapse ant-collapse-borderless ant-collapse-icon-position-left ml-collapse site-collapse-custom-collapse"
  >
    <div
      class="ant-collapse-item ant-collapse-item-active ml-collapse-panel site-collapse-custom-panel"
    >
      <div
        aria-expanded="true"
        class="ant-collapse-header"
        role="button"
        tabindex="0"
      >
        <i
          aria-label="icon: right"
          class="anticon anticon-right ant-collapse-arrow"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="-ms-transform:rotate(90deg);transform:rotate(90deg)"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
            />
          </svg>
        </i>
        This is panel header 1
      </div>
      <div
        class="ant-collapse-content ant-collapse-content-active"
      >
        <div
          class="ant-collapse-content-box"
        >
          <p>
            Example body text
          </p>
        </div>
      </div>
    </div>
    <div
      class="ant-collapse-item ant-collapse-item-active ml-collapse-panel site-collapse-custom-panel"
    >
      <div
        aria-expanded="true"
        class="ant-collapse-header"
        role="button"
        tabindex="0"
      >
        <i
          aria-label="icon: right"
          class="anticon anticon-right ant-collapse-arrow"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="-ms-transform:rotate(90deg);transform:rotate(90deg)"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
            />
          </svg>
        </i>
        This is panel header 2
      </div>
      <div
        class="ant-collapse-content ant-collapse-content-active"
      >
        <div
          class="ant-collapse-content-box"
        >
          <p>
            A dog is a type of domesticated animal.
  Known for its loyalty and faithfulness,
  it can be found as a welcome guest in many households across the world.
          </p>
        </div>
      </div>
    </div>
    <div
      class="ant-collapse-item ant-collapse-item-disabled ml-collapse-panel site-collapse-custom-panel"
    >
      <div
        aria-expanded="false"
        class="ant-collapse-header"
        role="button"
        tabindex="-1"
      >
        <i
          aria-label="icon: right"
          class="anticon anticon-right ant-collapse-arrow"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
            />
          </svg>
        </i>
        This is panel header 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Data Display/MLCollapse Nested Panel 1`] = `
<div>
  <div>
    Note: On the hosted (non-local) StoryBook, this component's custom CSS is not currently rendering correctly. This should not affect use of the component in your app.
  </div>
  <div
    class="ant-collapse ant-collapse-borderless ant-collapse-icon-position-left ml-collapse"
    role="tablist"
  >
    <div
      class="ant-collapse-item ant-collapse-item-active ml-collapse-panel"
    >
      <div
        aria-expanded="true"
        class="ant-collapse-header"
        role="tab"
        tabindex="0"
      >
        <i
          aria-label="icon: right"
          class="anticon anticon-right ant-collapse-arrow"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="-ms-transform:rotate(90deg);transform:rotate(90deg)"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
            />
          </svg>
        </i>
        This is panel header 1
      </div>
      <div
        class="ant-collapse-content ant-collapse-content-active"
        role="tabpanel"
      >
        <div
          class="ant-collapse-content-box"
        >
          <div
            class="ant-collapse ant-collapse-borderless ant-collapse-icon-position-left ml-collapse"
          >
            <div
              class="ant-collapse-item ml-collapse-panel"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <i
                  aria-label="icon: right"
                  class="anticon anticon-right ant-collapse-arrow"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                    />
                  </svg>
                </i>
                This is a nested panel
              </div>
            </div>
            <div
              class="ant-collapse-item ml-collapse-panel"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <i
                  aria-label="icon: right"
                  class="anticon anticon-right ant-collapse-arrow"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                    />
                  </svg>
                </i>
                This is a nested panel
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-collapse-item ml-collapse-panel"
    >
      <div
        aria-expanded="false"
        class="ant-collapse-header"
        role="tab"
        tabindex="0"
      >
        <i
          aria-label="icon: right"
          class="anticon anticon-right ant-collapse-arrow"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
            />
          </svg>
        </i>
        This is panel header 2
      </div>
    </div>
    <div
      class="ant-collapse-item ant-collapse-item-disabled ml-collapse-panel"
    >
      <div
        aria-expanded="false"
        class="ant-collapse-header"
        role="tab"
        tabindex="-1"
      >
        <i
          aria-label="icon: right"
          class="anticon anticon-right ant-collapse-arrow"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
            />
          </svg>
        </i>
        This is panel header 3
      </div>
    </div>
  </div>
</div>
`;
